# m300_ws

./: README.md
src/arduino_actuator/: CMakeLists.txt  package.xml
src/arduino_actuator/src/: cpp_servo_control.cpp  servo_pub.py
src/cv_bridge/cv_bridge/: CMakeLists.txt
src/dji_osdk_ros_cv4/config/: H20T_Camera.yaml
src/dji_osdk_ros_cv4/launch/: dji_vehicle_node.launch  export_images.launch
src/forest_fire_detection_system/: CMakeLists.txt
src/forest_fire_detection_system/config/: H20T_Camera.yaml  ZigzagPathShape.yaml
src/forest_fire_detection_system/include/app/precisely_water_dropping/: PreciselyWaterDropping.hpp
src/forest_fire_detection_system/include/modules/DroneMovementController/: DroneMovementController.hpp
src/forest_fire_detection_system/include/modules/ImgVideoOperator/: RGB_IRSeperator.hpp
src/forest_fire_detection_system/include/tools/: SystemLib.hpp
src/forest_fire_detection_system/include/tools/PrintControl/: FileWritter.hpp
src/forest_fire_detection_system/scripts/modules/thermal_rgb_fusion/: heat_ir_threshold_locater.py
src/forest_fire_detection_system/src/app/precisely_water_dropping/: PreciselyWaterDropping.cpp
src/forest_fire_detection_system/src/app/single_fire_point_reconstruction/: GrabInfoForReconstruction.cpp
src/forest_fire_detection_system/src/app/single_fire_point_task/: SingleFirePointTaskManager.cpp
src/forest_fire_detection_system/src/modules/DroneMovementController/: DroneMovementController.cpp
src/forest_fire_detection_system/src/modules/GimbalCameraOperator/: GimbalCameraOperator.cpp
src/forest_fire_detection_system/src/modules/ImgVideoOperator/: RGB_IRSeperator.cpp
src/forest_fire_detection_system/src/modules/PoseCalculator/: PoseCalculator.cpp_
src/forest_fire_detection_system/src/modules/WayPointOperator/: WpV2Operator.cpp
src/forest_fire_detection_system/src/test/: test_PoseAttStereoCamOperator.cpp_  test_PoseCalculator.cpp_  test_StereoCamOpertaor.cpp_  test_getParam.cpp
src/forest_fire_detection_system/src/tools/: SaveM300FrontStereoImu.cpp_  ToggleVehicleVideo.cpp
src/forest_fire_fighting/: CMakeLists.txt  package.xml  readme.md
src/forest_fire_fighting/scripts/: fire_detection.py
src/forest_fire_fighting/src/: compress_video_node.cpp
src/forest_fire_geopositioning/: CMakeLists.txt  camera_poses_GPS.txt  camera_poses_GPS_calculated.txt  fire_spots_GPS.txt  readme.md
src/forest_fire_geopositioning/launch/: fire_detection.launch
src/forest_fire_geopositioning/scripts/: fire_detection.py  fire_detection_v5.py  fire_detection_v8.py  qcar_detection_v8.py
src/forest_fire_geopositioning/src/: GPS_sub.cpp  GPS_visual_fusion.cpp  compress_video_node.cpp  fire_spots_visualization.cpp  (+4 more)
(+5 files in other folders)
